[package]
name = "directed-scm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
rand = "*"
clap = { version = "3.0.8", features = ["derive"] }
rayon = "*"
indexmap = {version = "*", features = ["serde"] }
#output hdf5 saving
hdf5 = "*"
ndarray = "*"
#state saving
bincode = "*"
flate2 = "*"
rand_xoshiro = { version = "*", features = ['serde1'] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
#bindgen = "*"
cc = "*"

[profile.release]
debug = true
