[package]
name = "directed-scm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "sample"

[dependencies]
array_tool = "*"
libc = "*"
rand = { version = "*", features = ["serde1"] }
clap = { version = "3.0.8", features = ["derive"] }
rayon = "*"
indexmap = {version = "*", features = ["serde"] }
seahash = "*"
#output hdf5 saving
hdf5 = "*"
ndarray = "*"
#state saving
bincode = "*"
rand_xoshiro = { version = "*", features = ['serde1'] }
serde = { version = "1.0", features = ["derive"] }

flag-complex = { git = "https://github.com/TheJonny/flag-complex" }

[profile.release]
debug = true
